[package]
name = "code"
version = "0.1.0"
edition = "2021"
authors = ["PeterTP <0petertp@gmail.com>", "JNicoG <nicoganacias@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.32.0", features = ["full"] }
serenity = "0.11.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"